# FPGA-Based-EdgeAI-Prototypes

./: .gitignore  README.md
face_detection/: CMakeLists.txt  README.md  build.sh  client.cpp  face_detection_seq.cpp  face_detection_server.cpp  face_detection_simple.cpp
pose_estimation/: CMakeLists.txt  README.md  build.sh  client.cpp  pose_estimation_seq.cpp  pose_estimation_server.cpp  pose_estimation_simple.cpp
